Wed Jun  5 00:32:18 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_require.rb: Remove temporally files in the tests.

	* test/ruby/test_rubyoptions.rb: Ditto.

	* test/logger/test_logger.rb: Ditto.

	* test/psych/test_psych.rb: Ditto.

	* test/readline/test_readline.rb: Ditto.

	* test/syslog/test_syslog_logger.rb: Ditto.

	* test/webrick/test_httpauth.rb: Ditto.

	* test/zlib/test_zlib.rb: Ditto.

Wed Jun  5 00:08:55 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* dir.c (bracket): fix copy-paste error.  When the first and last
	  characters of fnmatch range have different length, fnmatch may
	  have wrongly matched a path that does not really match.
	  Coverity Scan found this bug.

Wed Jun  5 00:04:12 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_quote_unprintable): check if argument is a string.

Tue Jun  4 23:42:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (loaded_feature_path): fix invalid read by index underflow.
	  the beginning of name is also a boundary as well as just after '/'.

Tue Jun  4 23:32:12 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* variable.c (set_const_visibility): use rb_frame_this_func() instead
	  of rb_frame_callee() for getting the name of the called method

	* test/ruby/test_module.rb: add test for private_constant with no args

Tue Jun  4 23:27:24 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_callee_setup_keyword_arg,
	  vm_callee_setup_arg_complex): consider a hash argument for keyword
	  only when the number of arguments is more than the expected
	  mandatory parameters.  [ruby-core:53199] [ruby-trunk - Bug #8040]

	* test/ruby/test_keyword.rb: update a test for above.

Tue Jun  4 00:46:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (setup_overlapped, finish_overlapped): extract from
	  rb_w32_read() and rb_w32_write().

Tue Jun  4 00:02:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
