@@ -686,6 +686,7 @@ if defined? Zlib
     end
 
     def test_rewind
+      bug8467 = '[ruby-core:55220] [Bug #8467]'
       t = Tempfile.new("test_zlib_gzip_reader_rewind")
       t.close
       Zlib::GzipWriter.open(t.path) {|gz| gz.print("foo") }
@@ -694,6 +695,11 @@ if defined? Zlib
         assert_equal("foo", f.read)
         f.rewind
         assert_equal("foo", f.read)
+      end
+      open(t.path, "rb") do |f|
+        gz = Zlib::GzipReader.new(f)
+        gz.rewind
+        assert_equal(["foo"], gz.to_a, bug8467)
       end
       t.close(true)
     end
